add session management features: implement session creation, validation, and deletion in SessionService